force-app/main/default/objects/HR_Applicant__c/HR_Applicant__c.object-meta.xml
<CustomObject>
    <description>Used to managed job applicants.  Included in the App Cloud Harbor Cruise package.</description>
    <label>Applicant</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>