force-app/main/default/objects/HR_Applicant__c/fields/HR_Applicant_ID__c.field-meta.xml
<CustomField>
    <fullName>HR_Applicant_ID__c</fullName>
    <externalId>true</externalId>
    <label>Applicant ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>