force-app/main/default/objects/HR_Applicant__c/fields/HR_Contact__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HR Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HR_Applicant_HR_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>