force-app/main/default/objects/HR_Applicant__c/fields/HR_Current_Employer__c.field-meta.xml
<CustomField>
    <fullName>HR_Current_Employer__c</fullName>
    <defaultValue>'Oracle'</defaultValue>
    <label>Current Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>