force-app/main/default/objects/HR_Applicant__c/fields/HR_Current_Title__c.field-meta.xml
<CustomField>
    <fullName>HR_Current_Title__c</fullName>
    <label>Current Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>