force-app/main/default/objects/HR_Applicant__c/fields/HR_Email__c.field-meta.xml
<CustomField>
    <fullName>HR_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>