force-app/main/default/objects/HR_Applicant__c/fields/HR_Headshot_Url__c.field-meta.xml
<CustomField>
    <fullName>HR_Headshot_Url__c</fullName>
    <label>Headshot Url</label>
    <length>250</length>
    <type>Text</type>
</CustomField>