force-app/main/default/objects/HR_Applicant__c/fields/HR_Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>HR_Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HR_Hiring_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>