force-app/main/default/objects/HR_Applicant__c/fields/HR_Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>HR_Mailing_Postal_Code__c</fullName>
    <label>Mailing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>