force-app/main/default/objects/HR_Applicant__c/fields/HR_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>HR_Mailing_State__c</fullName>
    <label>Mailing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>