force-app/main/default/objects/HR_Applicant__c/fields/HR_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>HR_Mailing_Street__c</fullName>
    <label>Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>