force-app/main/default/objects/HR_Applicant__c/fields/HR_Manager_Experience__c.field-meta.xml
<CustomField>
    <fullName>HR_Manager_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Experience</label>
    <type>Checkbox</type>
</CustomField>