force-app/main/default/objects/HR_Applicant__c/fields/HR_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>HR_Mobile_Phone__c</fullName>
    <defaultValue>'415-555-1212'</defaultValue>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>