force-app/main/default/objects/HR_Applicant__c/fields/HR_Position__c.field-meta.xml
<CustomField>
    <fullName>HR_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Requisition</label>
    <referenceTo>HR_Job_Requisition__c</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>HR_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>