force-app/main/default/objects/HR_Applicant__c/fields/HR_Resume__c.field-meta.xml
<CustomField>
    <fullName>HR_Resume__c</fullName>
    <label>Resume</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>