force-app/main/default/objects/HR_Applicant__c/fields/HR_Status__c.field-meta.xml
<CustomField>
    <fullName>HR_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Review Resume</fullName>
            </value>
            <value>
                <fullName>Phone Screen</fullName>
            </value>
            <value>
                <fullName>Schedule interview</fullName>
            </value>
            <value>
                <fullName>Expend Offer</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>