force-app/main/default/objects/HR_Applicant__c/fields/HR_US_Citizen__c.field-meta.xml
<CustomField>
    <fullName>HR_US_Citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US Citizen</label>
    <type>Checkbox</type>
</CustomField>