force-app/main/default/objects/HR_Applicant__c/fields/HR_Visa_Required__c.field-meta.xml
<CustomField>
    <fullName>HR_Visa_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa Required</label>
    <type>Checkbox</type>
</CustomField>