force-app/main/default/objects/HR_Applicant__c/listViews/HR_New_Applicants.listView-meta.xml
<ListView>
    <fullName>HR_New_Applicants</fullName>
    <columns>NAME</columns>
    <columns>HR_Position__c</columns>
    <columns>HR_Current_Employer__c</columns>
    <columns>HR_Current_Title__c</columns>
    <columns>HR_Education__c</columns>
    <columns>HR_Mailing_State__c</columns>
    <columns>HR_Status__c</columns>
    <columns>HR_Location__c</columns>
    <columns>HR_Contact__c</columns>
    <columns>HR_Hiring_Manager__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HR_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Applicants</label>
</ListView>