force-app/main/default/objects/HR_Applicant__c/listViews/HR_Rejected_Applicants.listView-meta.xml
<ListView>
    <fullName>HR_Rejected_Applicants</fullName>
    <columns>NAME</columns>
    <columns>HR_Current_Employer__c</columns>
    <columns>HR_Current_Title__c</columns>
    <columns>HR_Education__c</columns>
    <columns>HR_Mailing_State__c</columns>
    <columns>HR_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HR_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected/Cancelled Applicants</label>
</ListView>